--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "test": "jest"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/helinzamar/uppgift-5.git"
